# IGRA_BUG_FIX

./: .gitignore  IGRA_BUG_FIX_Code_Changes_Explanation.md  IGRA_Labs_Security_Audit_Report.md  README.md
attestor-deploy/: .env.example.mainnet  .env.example.testnet  .gitignore  LICENSE  README.md  docker-compose.yml  setup.sh
calf/: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt  test_launcher.py  visualizer.py
calf/proc_macros/: Cargo.toml
calf/proc_macros/src/: lib.rs
calf/src/: main.rs
calf/src/db/: mod.rs
calf/src/network/: mod.rs  primary.rs  swarm_actions.rs  swarm_events.rs  worker.rs
calf/src/primary/: dag_processor.rs  digests_receiver.rs  header_builder.rs  header_elector.rs  mod.rs  sync_tracker.rs  test_utils.rs
calf/src/settings/: parser.rs
calf/src/synchronizer/: feeder.rs  fetcher.rs  mod.rs  traits.rs
calf/src/types/: agents.rs  batch.rs  block_header.rs  certificate.rs  dag.rs  mod.rs  network.rs  signing.rs  sync.rs  traits.rs  transaction.rs  vote.rs
calf/src/utils/: mod.rs
calf/src/worker/: batch_broadcaster.rs  batch_maker.rs  batch_receiver.rs  mod.rs  quorum_waiter.rs  sync_relayer.rs  transaction_event_listener.rs
degov/docker/: web.Dockerfile
dnsseeder/: dnsseed.go
igra-eip4788-modifications/: .gitignore  README.md
igra-eip4788-modifications/docs/: README.md  modified-eip4788-contract.md  original-eip4788-contract.md  randao-reader-contract.md
igra-eip4788-modifications/scripts/: bytecode-to-hex.py
igra-eip4788-modifications/src/: README.md  modified-eip4788-contract.bytecode  original-eip4788-contract.bytecode  randao-reader-contract.bytecode
igra-eip4788-modifications/test/: README.md
igra-orchestra/: .cursorignore  .env.atan.example  .env.dev.example  .env.devnet.example  .env.example  .env.galleon-testnet.example  .env.mainnet.example  .gitignore  README.md  docker-compose.atan.yml  docker-compose.devnet.yml  docker-compose.yml  mkdocs.yml  versions.devnet.env  versions.galleon-testnet.env  versions.mainnet.env
igra-orchestra-public/: .env.backend-with-rpc.example  .env.backend.example  .gitignore  README.md  docker-compose.yml  setup-repos.sh
igra-orchestra-public/doc/: quick-setup-prebuilt.md  quick-setup-rpc.md
igra-orchestra/doc/: index.md  kaspa-wallet.md  log-management.md  quick-setup-galleon-testnet.md  quick-setup-mainnet.md
igra-orchestra/scripts/: fetch-block-hashes.sh  setup-devnet.sh  setup-galleon-testnet.sh  setup-mainnet.sh  upgrade-mainnet-v2.3-to-v3.0.sh  wallet-balance-api.sh
igra-rpc-provider/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  config.toml  deny.toml  rust-toolchain.toml  typos.toml
igra-rpc-provider/.github/workflows/: build-and-test.yml  dependency-audit.yml  docker-build-check.yml  docker-publish.yml  linter.yml  pr-title.yml
igra-rpc-provider/doc/: architecture.md  entry-transaction-cli.md  tx-perf-cli.md
igra-rpc-provider/src/: error.rs  lib.rs  main.rs
igra-rpc-provider/src/api/: health.rs  mod.rs  routing.rs  rpc.rs  ws.rs
igra-rpc-provider/src/clients/: el_caller.rs  mod.rs  wallet_caller.rs
igra-rpc-provider/src/config/: app.rs  gas.rs  lane.rs  mining.rs  mod.rs  proxy.rs  retry.rs  security.rs  server.rs  wallet.rs
igra-rpc-provider/src/errors/: gas.rs  mod.rs  proxy.rs  transaction.rs  wallet.rs
igra-rpc-provider/src/services/: entry_transaction.rs  gas_manager.rs  gas_price.rs  lane.rs  mining.rs  mod.rs  proxy.rs  transaction.rs  transaction_processor.rs  wallet_service.rs
igra-rpc-provider/src/tools/: mod.rs
igra-rpc-provider/src/tools/tx_perf/: duration.rs  metrics.rs  mod.rs  parser.rs  printer.rs
igra-rpc-provider/src/types/: mod.rs  rpc.rs  wallet.rs  whitelist.rs
igra-rpc-provider/src/utils/simulators/wallet/: README.md  kaspa_wallet_simulator.rs
kaswallet/: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  _typos.toml  deny.toml  docker-compose.yml  install.sh  test_plan.md
kaswallet-proto/: .gitignore  Cargo.toml  build.rs
kaswallet-proto/proto/: wallet.proto
kaswallet-proto/src/: kaswallet_proto.rs  lib.rs  wallet_proto.rs
kaswallet/.github/workflows/: build-and-test.yml  dependency-audit.yml  docker-build-check.yml  docker-publish.yml  linter.yml  pr-title.yml
kaswallet/cli/: Cargo.toml
kaswallet/cli/src/: args.rs  commands.rs  main.rs  utils.rs
kaswallet/client/: Cargo.toml
kaswallet/client/src/: client.rs  lib.rs  model.rs
kaswallet/common/: Cargo.toml
kaswallet/common/src/: addresses.rs  args.rs  encrypted_mnemonic.rs  error_location.rs  keys.rs  lib.rs  model.rs  proto_convert.rs  status_classify.rs
kaswallet/common/src/errors/: category.rs  config.rs  crypto.rs  mod.rs  root.rs  rpc.rs  status_mapping_tests.rs  storage.rs  sync.rs  transaction.rs  user_input.rs
kaswallet/create/: Cargo.toml
kaswallet/create/src/: args.rs  generate_keys_file.rs  helpers.rs  lib.rs  main.rs
kaswallet/daemon/: Cargo.toml
kaswallet/daemon/src/: address_manager.rs  args.rs  daemon.rs  kaspad_client.rs  lib.rs  log.rs  main.rs  sync_manager.rs  transaction_generator.rs  utxo_manager.rs
kaswallet/daemon/src/service/: broadcast.rs  common.rs  create_unsigned_transaction.rs  get_addresses.rs  get_balance.rs  get_utxos.rs  kaswallet_service.rs  mod.rs  new_address.rs  send.rs  sign.rs
kaswallet/dump-mnemonics/: Cargo.toml
kaswallet/dump-mnemonics/src/: args.rs  main.rs
kaswallet/proto/: Cargo.toml  LICENSE  build.rs
kaswallet/proto/src/: lib.rs  wallet.proto
kaswallet/test/helpers/: Cargo.toml
kaswallet/test/helpers/src/: create.rs  lib.rs  mine_block.rs  mnemonics.rs  start_daemon.rs
kaswallet/test/integration/: Cargo.toml
kaswallet/test/integration/src/: lib.rs  p2pk_test.rs  subnetwork_id_test.rs
kaswallet/test_client/: Cargo.toml
kaswallet/test_client/src/: main.rs
kron-sdk/: CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  tsup.config.ts
kron-sdk/docs/: INTEGRATION.md  WALLETS.md
kron-sdk/src/: index.ts
poc-orchestra/: README.md  docker-compose.yml
(+122 files in other folders)
