[package]
name = "calf"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
derive_more = {version = "1.0.0", features = ["full"]}
tokio = {version = "1.41.1", features = ["full", "test-util"]}
tokio-metrics = "0.3.1"
blake3 = "1.5.4"
clap = {version = "4.5.21", features = ["derive"]}
futures = "0.3"
futures-util = "0.3"
futures-timer = "3.0"
tracing = "0.1.40"
json = "0.12.4"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
anyhow = "1.0.93"
libp2p = { version = "0.53.2", features = ["full"]}
tracing-subscriber = "0.3.18"
bincode = "1.3.3"
crossterm = {version = "0.28.1", features = ["event-stream"]}
hex = "0.4.3"
tokio-util = "0.7.12"
rand = "0.8.5"
proc_macros = {path = "./proc_macros"}
rocksdb = "0.22.0"
byte-unit = "5.1.6"
getset = "0.1.3"
chrono = "0.4"

[dev-dependencies]
rstest = "0.23.0"

[features]
dag_log = []