[package]
name = "igra-rpc-provider"
version = "0.2.1"
edition = "2021"
default-run = "igra-rpc-provider"
description = "RPC provider for Igra Network"
repository = "https://github.com/IgraLabs/igra-rpc-provider"
license = "Apache-2.0"

[dependencies]
alloy = { version = "1.1.3", default-features = false, features = [
    "consensus",
    "network",
    "signers",
    "rpc-types",
    "serde"
] }
axum = { version = "0.8.3", features = ["macros", "ws"] }
derive_more = { version = "1.0", features = ["display", "from"] }
borsh = "1.5.7"
bytes = "1.10.1"
chrono = "0.4.35"
clap = { version = "4.5.35", features = ["derive"] }
config = "0.15.11"
flate2 = "1.1.0"
futures-util = "0.3"
hdrhistogram = "7"
hex = "0.4"
humantime = "2.1"
anyhow = "1.0"
regex = "1"
# Pinned to upstream kaspanet/rusty-kaspa `toccata` branch (commit
# f1d1a1ae6a) so we can build and validate v1 (TX_VERSION_TOCCATA)
# transactions on non-native subnetworks per KIP-21. Mirrors the kaswallet
# daemon's pin (kaswallet/los-angeles-v2/Cargo.toml). `rev` (not `branch`)
# is used so a force-push cannot silently change our build; cargo rejects
# both being set. Bump the rev when picking up new Toccata work; flip to
# upstream master/main once Toccata is merged.
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "f1d1a1ae6a4131a3d6124fef443192323c1c382f" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "f1d1a1ae6a4131a3d6124fef443192323c1c382f" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "f1d1a1ae6a4131a3d6124fef443192323c1c382f" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "f1d1a1ae6a4131a3d6124fef443192323c1c382f" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "f1d1a1ae6a4131a3d6124fef443192323c1c382f" }
# Pinned to the kaswallet Toccata-prep branch ENG-1058/pycckuu/feat/
# subnetwork-id-toccata (commit 36eb435f8d) so the proto carries
# TransactionInput.compute_budget alongside sig_op_count — needed for v1
# (Toccata) input mass commitments to round-trip through the proto-to-
# kaspa converter. Using `rev` (not `branch`) so a feature-branch
# force-push cannot break us. Bump the rev when picking up new Toccata
# work; flip back to `main` once ENG-1058 is merged.
proto = { git = "ssh://git@github.com/IgraLabs/kaswallet.git", package = "kaswallet-proto", rev = "36eb435f8dbb1d12d68c8dda9c57655047555154" }
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
shlex = "1.1"
thiserror = "2.0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.12.3"
uuid = { version = "1.8.0", features = ["v4"] }
# Pin wasm-bindgen / js-sys to avoid version mismatch with rusty-kaspa
# transitive deps. Bumped js-sys 0.3.70 -> 0.3.77 to match the Toccata
# branch (matches kaswallet/los-angeles-v2/Cargo.toml line 89-91).
wasm-bindgen = "=0.2.100"
js-sys = "=0.3.77"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
tracing-test = "0.2"
tokio = { version = "1.38.0", features = ["macros"] }
wiremock = "0.6.0"

[lints.rust]
missing_docs = "allow"
unsafe_code = "forbid"

[lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[[bin]]
name = "kaspa_wallet_simulator"
path = "src/utils/simulators/wallet/kaspa_wallet_simulator.rs"

[[bin]]
name = "entry_transaction_sender"
path = "src/bin/entry_transaction_sender.rs"

[[bin]]
name = "tx_perf"
path = "src/bin/tx_perf.rs"
