[package]
name = "kaswallet-proto"
rust-version = "1.85.0"
version = "0.1.1"
edition = "2024"
authors = ["Kaspa Developers", "IgraNet Developers"]
license = "ISC"
repository = "https://github.com/IgraLabs/kaswallet-proto"

[lib]
name = "kaswallet_proto"
crate-type = ["cdylib", "lib"]

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"

[build-dependencies]
tonic-build = "0.12.3"
