[workspace]
resolver = "2"
members = [
    "cli",
    "common",
    "create",
    "daemon",
    "dump-mnemonics",
    "test_client",
    "proto",
    "client",
    "test/integration",
    "test/helpers"
]

[workspace.package]
rust-version = "1.85.0"
version = "0.1.1"
edition = "2024"
authors = ["Kaspa Developers", "IgraNet Developers"]
license = "ISC"
repository = "https://github.com/IgraLabs/kaswallet"
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "src/**/*.r",
    "proto/**/*.proto",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[workspace.dependencies]
kaswallet-cli = { path = "cli" }
kaswallet-common = { path = "common" }
kaswallet-proto = { path = "proto" }
kaswallet-daemon = { path = "daemon" }
kaswallet-create = { path = "create" }
kaswallet-client = { path = "client" }
kaswallet-test-helpers = { path = "test/helpers" }

# kaspanet/rusty-kaspa upstream, tracked on `master`, which now carries the
# Toccata work: v1 transactions with compute_budget input mass and non-native
# subnetwork ids.
kaspad = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-testing-integration = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1" }
hex = "0.4.3"
rand_core = "0.9.2"
regex = "1.11.1"
secrecy = "0.10.3"
zeroize = "1.8.1"
shellexpand = "3.1.0"
thiserror = "2.0.17"
borsh = "1.5.7"
clap = { version = "4.5.31", features = ["derive", "env"] }
rpassword = "7.3.1"
constant_time_eq = "0.4.0"
itertools = "0.14.0"
tokio = "1.43.0"
workflow-websocket = "0.18.0"
console-subscriber = "0.5.0"
futures = "0.3.31"
prost = "0.13"  # Keep prost and tonic versions to be the same as in rusty-kaspa.
tonic = { version = "0.12.3", features = ["tls-webpki-roots", "gzip", "transport"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
rstest = "0.26.1"
tempfile = "3.23.0"
rust_decimal = "1.36"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
# Pin wasm-bindgen/js-sys to avoid version mismatch with rusty-kaspa transitive deps (ENG-746)
# Bumped js-sys from 0.3.70 -> 0.3.77 to match what rusty-kaspa master requires.
wasm-bindgen = "=0.2.100"
js-sys = "=0.3.77"
