[package]
name = "kaswallet-client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaswallet-common.workspace = true
kaswallet-proto.workspace = true

kaspa-hashes.workspace = true

tokio.workspace = true
tonic.workspace = true
thiserror.workspace = true
