[package]
name = "kaswallet-test-client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaswallet-client.workspace = true
kaswallet-common.workspace = true
kaswallet-proto.workspace = true

kaspa-consensus-core.workspace = true

tokio.workspace = true
futures.workspace = true
